Docker/kub-deploy-09-finished/kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  type: ClusterIP # 외부에 직접적으로 연결되어 있지 않고 aws load balancer와 연결됨
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: dyckerkim/kub-dep-frontend:latest
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
