Docker/kub-deploy-09-finished/kubernetes/tasks.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-service
spec:
  selector:
    app: tasks
  type: ClusterIP # 외부에 직접적으로 연결되어 있지 않고 aws load balancer와 연결됨
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks
  template:
    metadata:
      labels:
        app: tasks
    spec:
      containers:
        - name: tasks-api
          image: dyckerkim/kub-dep-tasks
