Docker/kub-deploy-09-finished/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb # AWS Load Balancer Controller(alb)
    alb.ingress.kubernetes.io/scheme: internet-facing # alb가 public 인터넷으로부터 직접 트래픽을 받음(<-> internal VPC 내부 리소스만 접근 가능)
    alb.ingress.kubernetes.io/target-type: ip # alb가 트래픽을 라우팅할 때 Pod의 IP 주소를 직접 타겟으로 지정(<-> instance; EC2 인스턴스가 타겟)
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:058264434288:certificate/270b44e3-1722-48f8-a1b1-33e4c4314232 # AWS Certificate Manager에서 발급한 SSL/TLS 인증서
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]' # HTTP 트래픽은 80 포트, HTTPS 트래픽은 443 포트에서 수신하도록 설정
    alb.ingress.kubernetes.io/ssl-redirect: "443" # HTTP 요청을 자동으로 HTTPS로 리다이렉트함. 모든 트래픽이 암호화된 HTTPS를 사용하도록 강제(서버 <-> 브라우저 통신이 SSL/TLS를 통해 암호화)
  labels:
    app: ingress
spec:
  ingressClassName: alb
  rules:
    - host: www.flat-white.site
      http:
        # 각자 다른 Pod의 80 포트라 같아도 ㄱㅊ
        # nginx의 리버스 프록시 기능과 비슷하게 수행
        paths:
          - pathType: Prefix
            path: "/users" # https://www.flat-white.site/users로 시작하는 모든 요청이 users-service로 라우팅
            backend:
              service:
                name: users-service # user-service가 관리하는 Pod으로 전달하여 요청을 처리
                port:
                  number: 80
          - pathType: Prefix
            path: "/tasks" # https://www.flat-white.site/tasks로 시작하는 모든 요청이 tasks-service로 라우팅
            backend:
              service:
                name: tasks-service # tasks-service가 관리하는 Pod으로 전달하여 요청을 처리
                port:
                  number: 80
          - pathType: Prefix
            path: "/" # https://www.flat-white.site/로 시작하는 모든 요청이 frontend-service로 라우팅
            backend:
              service:
                name: frontend-service # frontend-service가 관리하는 Pod으로 전달하여 요청을 처리
                port:
                  number: 80
# Ingress
# 클러스터 내의 서비스에 대한 외부 접근을 관리하는 API 오브젝트
# SSL 인증서 설치, 도메인 기반 라우팅 등의 기능 포함
# Ingress Controller
# Ingress가 작동하기 위해서는 Ingress Controller가 실행되고 있어야 함
# AWS에서 제공하는 AWS Load Balancer Controller(alb) 사용 가능. Application Load Balancer와 다름
# 그 밖에 Nginx Ingress Controller 등이 있음
# 0. 쿠버네티스 서비스 계정과 IAM 역할을 연동 https://docs.aws.amazon.com/ko_kr/eks/latest/userguide/enable-iam-roles-for-service-accounts.html
# Cluster의 OpenID Connect provider URL을 복사해서 Identity providers에 추가하기
# 서비스 계정? Kubernetes 클러스터 내에서 실행되는 Pod 같은 컴포넌트에 대한 인증과 권한 부여를 관리
# 컨트롤러가 AWS API 호출하여 리소스(로드밸런서 등)를 생성할 때 적절한 인증 및 권한이 필요함
# 서비스 계정과 IAM이 연결되어야 Kubernetes 내부에서 실행되는 컨트롤러가 AWS 리소스(로드 밸런서, 타겟 그룹 등)에 접근 가능
# AWS Load Balancer Controller 설치 준비 https://docs.aws.amazon.com/ko_kr/eks/latest/userguide/lbc-helm.html
# 1. ALB Controller에 필요한 IAM 정책을 생성
# 2. AWS 콘솔에서 EKS가 쓰고 있는 IAM 역할에 IAM 정책(AWSLoadBalancerControllerIAMPolicy) 추가
# 3. ALB Controller가 사용할 Kubernetes 서비스 계정을 생성하고 IAM 역할을 연결하여 AWS API 호출 권한 부여
# 4. ALB 설치
# 결과: 외부 서비스와 연결되는 Application Load Balancer 자동 생성, 타겟 그룹 자동 생성. 외부와 연결되는 로드밸런서를 1개로 관리할 수 있으다는 장점
# Route 53
# DNS 트래픽 라우팅; 사용자가 도메인 이름을 입력하면 IP 주소로 라우팅
# Route 53에서 hosting zone을 추가하고 ALB Controller 주소를 레코드에 추가
# 도메인을 구매한 곳(가비아 등)의 네임 서버에 Route 53의 네임 서버를 붙여넣기
# Cloud Watch
# eks cluster의 node 그룹의 iam의 정책 권한에  CloudWatchAgentServerPolicy 추가
# aws eks create-addon --cluster-name my-cluster-name --addon-name amazon-cloudwatch-observability
# https://docs.aws.amazon.com/ko_kr/AmazonCloudWatch/latest/monitoring/Container-Insights-setup-EKS-quickstart.html 따라하기
